inline buttons. before changes

--- a/index.html
+++ b/index.html
@@ -258,8 +258,16 @@
 
               </ul>
               <!--controls-->
-              <button class="calc__button">Calculate</button>
-              <button class="calc__button calc__button-reset">Reset</button>
+              <ul class="calc__controls-list">
+                <li class="calc__controls-list-item">
+                  <button class="calc__button">Calculate</button>
+                </li>
+                <li class="calc__controls-list-item">
+                  <button class="calc__button calc__button-reset">Reset</button>
+                </li>
+              </ul>
+              
+              
               <!--/controls-->
             </div>
             <ul class="calc__inputs-list calc__inputs-list_results">
